--- a/redshift.conf
+++ b/redshift.conf
@@ -1,7 +1,7 @@
 ; Global settings for redshift
 [redshift]
 ; Set the day and night screen temperatures
-temp-day=5000
+temp-day=5100
 temp-night=4400
 
 ; Enable/Disable a smooth transition between day and night
@@ -9,18 +9,11 @@ temp-night=4400
 ; 1 will gradually increase or decrease the screen temperature.
 transition=1
 
-; Set the screen brightness. Default is 1.0.
-;brightness=0.9
-; It is also possible to use different settings for day and night
-; since version 1.8.
-;brightness-day=0.7
-;brightness-night=0.4
-; Set the screen gamma (for all colors, or each color channel
-; individually)
 gamma=0.8
-;gamma=0.8:0.7:0.8
-; This can also be set individually for day and night since
-; version 1.10.
-;gamma-day=0.8:0.7:0.8
-;gamma-night=0.6
 
+; set location provider: manual or geoclue2
+location-provider=manual
+
+[manual]
+lat=38.03
+lon=145.35
