--- a/linux/home/vishnu/.config/i3status/config
+++ b/linux/home/vishnu/.config/i3status/config
@@ -13,11 +13,11 @@ general {
 
 order += "wireless _first_"
 order += "ethernet _first_"
-order += "battery all"
 order += "disk /"
 order += "cpu_usage"
 order += "memory"
 order += "volume master"
+order += "battery all"
 order += "tztime local"
 
 wireless _first_ {
@@ -31,7 +31,7 @@ ethernet _first_ {
 }
 
 battery all {
-        format = "%status %percentage %remaining"
+        format = " %status %percentage "
 }
 
 disk "/" {
@@ -39,11 +39,11 @@ disk "/" {
 }
 
 memory {
-	format = "MEM: %used"
+	format = " MEM: %used "
 }
 
 cpu_usage {
-	format = "CPU: %usage"
+	format = " CPU: %usage "
 }
 
 volume master {
@@ -52,6 +52,6 @@ volume master {
 }
 
 tztime local {
-        format = "%d-%m-%Y %H:%M:%S"
+        format = " %d-%m-%Y %H:%M:%S"
 }
 
