--- a/linux/etc/X11/xorg.conf.d/20-intel.conf
+++ b/linux/etc/X11/xorg.conf.d/20-intel.conf
@@ -1,5 +1,7 @@
 Section "Device"
   Identifier "Intel Graphics"
-  Driver "intel"
+  Driver "modesetting"
   Option "TearFree" "true"
+  Option "TripleBuffer" "true"
+  Option "DRI" "iris"
 EndSection
